--- a/style.css
+++ b/style.css
@@ -2,6 +2,10 @@ body {
 	background-color: #ff0000;
 }
 
+#countdown-content {
+	
+}
+
 #countdown {
 	font-size: 200px;
 	font-family: 'Orbitron', sans-serif;
