--- a/style.css
+++ b/style.css
@@ -3,12 +3,20 @@ body {
 }
 
 #countdown-content {
-	
-}
-
-#countdown {
-	font-size: 200px;
+	font-size: 350px;
 	font-family: 'Orbitron', sans-serif;
 	color: #ffffff;
-	padding: 20vh 25vw;
+	padding: 20vh 0vw 0vh 5vw;
+}
+
+#countdowntext {
+	position: fixed;
+	top: 10%;
+	left: 25%;
+}
+
+#countdowntext{
+	font-size: 80px;
+	/*position: absolute;*/
+	display: none;
 }
