--- a/style.css
+++ b/style.css
@@ -1,5 +1,32 @@
 body {
-	background-color: #ff0000;
+	background-color: #ffffff;
+}
+
+.container {
+	display: grid;
+	grid-template-columns: 25% 25% 25% 25%;
+  	grid-template-rows: 25% 25% 25% 25%;
+}
+
+.item-a {
+	grid-column-start: 1;
+	grid-column-end: 3;
+	grid-row-start: 1;
+	grid-row-end: 5;
+}
+
+.item-b {
+	grid-column-start: 3;
+	grid-column-end: 5;
+	grid-row-start: 1;
+	grid-row-end: 3;
+}
+
+.item-c {
+	grid-column-start: 3;
+	grid-column-end: 5;
+	grid-row-start: 3;
+	grid-row-end: 5;
 }
 
 #countdown-content {
@@ -9,13 +36,14 @@ body {
 	padding: 20vh 0vw 0vh 5vw;
 }
 
+#countdown {
+	/*left: 3%;*/
+}
+
 #countdowntext {
 	position: fixed;
 	top: 10%;
 	left: 25%;
-}
-
-#countdowntext{
 	font-size: 80px;
 	/*position: absolute;*/
 	display: none;
