--- a/style.css
+++ b/style.css
@@ -31,7 +31,7 @@ body {
 
 #countdown-content {
 	font-size: 350px;
-	/* font-family: 'Orbitron', sans-serif; */
+	font-familsy: 'Orbitron', sans-serif;
 	color: #ffffff;
 	padding: 20vh 0vw 0vh 5vw;
 }
